cmake_minimum_required(VERSION 3.20)
project(Data_Structure)

set(CMAKE_CXX_STANDARD 14)
#file(GLOB Hello *.cpp)
#foreach(testsourcefile ${Hello})
#    string(REPLACE ".cpp" "" testname ${testsourcefile})
#    string(REPLACE "D:/Develop/CLionProjects/Data_Structure/" "" hiname ${testname})
#    add_executable(${hiname} ${testsourcefile})
#endforeach(testsourcefile ${Hello}})
# 遍历项目根目录下所有的 .cpp 文件
file (GLOB_RECURSE files *.cpp)
foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    add_executable (${exe} ${file})
    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()